--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
 	<property name="build" value="build"/>
 	<property name="classes" value="${build}/classes"/>
 	<property name="jar" value="${build}/jar"/>
-	<property name="main-class" value="srma.ExampleSamUsage"/>
+	<property name="main-class" value="srma.SRMA"/>
 	<property name="lib" value="lib"/>
 	<property name="sam-version" value="1.06"/>
 	<property name="picard-version" value="1.06"/>
