--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,7 @@
 			<classpath refid="sam-jdk.path"/>
 			<classpath refid="picard-jdk.path"/>
 			<classpath refid="classpath"/>
+			<compilerarg value="-Xlint"/>
 		</javac>
 	</target>
 
