--- a/java/build.xml
+++ b/java/build.xml
@@ -4,7 +4,7 @@
 	<property name="classes" value="${build}/classes"/>
 	<property name="jar" value="${build}/jar"/>
 	<property name="dist" value="dist"/>
-	<property name="scripts" value="scripts"/>
+	<property name="scripts" value="../scripts"/>
 	<property name="main-class" value="srma.SRMA"/>
 	<property name="lib" value="lib"/>
 	<property name="sam-version" value="1.25"/>
@@ -66,6 +66,10 @@
 		<zip zipfile="${dist}/srma-${srma-version}.zip">
 			<zipfileset dir="${jar}" includes="*.jar" prefix="srma-${srma-version}"/>
 			<zipfileset dir="${scripts}" includes="*.pl" prefix="srma-${srma-version}"/>
+			<zipfileset dir="." includes="ChangeLog" prefix="srma-${srma-version}"/>
+			<zipfileset dir="." includes="TODO" prefix="srma-${srma-version}"/>
+			<zipfileset dir="../." includes="LICENSE" prefix="srma-${srma-version}"/>
+			<zipfileset dir="../." includes="README" prefix="srma-${srma-version}"/>
 		</zip>
 	</target>
 </project>
