--- a/java/build.xml
+++ b/java/build.xml
@@ -68,6 +68,7 @@
 			<zipfileset dir="${scripts}" includes="*.pl" prefix="srma-${srma-version}"/>
 			<zipfileset dir="." includes="ChangeLog" prefix="srma-${srma-version}"/>
 			<zipfileset dir="." includes="TODO" prefix="srma-${srma-version}"/>
+			<zipfileset dir="." includes="LICENSE" prefix="srma-${srma-version}"/>
 		</zip>
 	</target>
 </project>
