--- a/c-code/configure.ac
+++ b/c-code/configure.ac
@@ -10,7 +10,7 @@ AC_PREREQ(2.59);
 AC_INIT([srma],[0.1.8],[srma-help@lists.sourceforge.net],[srma])
 AC_COPYRIGHT([See LICENSE for copyright information.])
 AC_CONFIG_AUX_DIR(config)
-AM_INIT_AUTOMAKE([dist-bzip2])
+AM_INIT_AUTOMAKE([dist-bzip2 subdir-objects])
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
 
@@ -19,6 +19,7 @@ AC_CANONICAL_BUILD
 
 # Check for C and C++ compilers
 AC_PROG_CC
+AM_PROG_CC_C_O
 
 AC_PROG_INSTALL
 AC_GNU_SOURCE
